# kitty-lang

./: Cargo.toml  NOTES.md  README.md  TODO.md
.github/workflows/: ci.yml  release.yml
crates/kitty-lang/: Cargo.toml
crates/kitty-lang-ast/: Cargo.toml
crates/kitty-lang-ast/src/: builder.rs  exprs.rs  lib.rs  pretty_printer.rs
crates/kitty-lang-interpreter/: Cargo.toml
crates/kitty-lang-interpreter/src/: lib.rs  parser.rs  pratt.rs  scanner.rs  tokens.rs
crates/kitty-lang/src/: lib.rs  scanner.rs  tokens.rs
scripts/: release.py
src/: kli.rs
tests/: test_scanner.rs
