[package]
name = "kitty-lang-cli"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/smacdo/kitty-lang"
repository = "https://github.com/smacdo/kitty-lang"

[workspace.dependencies]
thiserror = "2"

[[bin]]
name = "kli"
path = "src/kli.rs"

[dependencies]
kitty-lang = { path = "./crates/kitty-lang" }
