[package]
name = "kitty-lang"
description = "An experimental typed programming language"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2024"
version = "0.0.1"
authors = ["Scott MacDonald"]
homepage = "https://github.com/smacdo/kitty-lang"
repository = "https://github.com/smacdo/kitty-lang"
license = "Apache-2.0"

[workspace.dependencies]
thiserror = "2"

[[bin]]
name = "kli"
path = "src/kli.rs"

[dependencies]
kitty-lang-ast = { path = "./crates/kitty-lang-ast", version = "0.0.1" }
kitty-lang-interpreter = { path = "./crates/kitty-lang-interpreter", version = "0.0.1" }

