[package]
name = "kitty-lang-ast"
description = "The abstract syntax tree and supporting utils for the kitty language"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
slotmap.workspace = true
