[package]
name = "kitty-lang-interpreter"
description = "An intepreter for the kitty language"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
kitty-lang-ast.workspace = true
thiserror.workspace = true
slotmap.workspace = true
